--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "testingContext": "Server=(localdb)\\mssqllocaldb;Database=testingDB;Trusted_Connection=True;MultipleActiveResultSets=true;User=sa; Password =Pakistan123+"
+    "testingContext": "Server=localhost,1433;Database=CatFinderDB;User Id=sa;Password=Stkhm-9876;TrustServerCertificate=true;"
   }
 }
