--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "testingContext": "Server=localhost,1433;Database=CatFinderDB;User Id=sa;Password=Stkhm-9876;TrustServerCertificate=true;"
+    "testingContext":"Server=(localdb)\\mssqllocaldb;Database=testingDB;Trusted_Connection=True;MultipleActiveResultSets=true;User=sa; Password =Pakistan123+"
+
   },
   "Logging": {
     "LogLevel": {
