Reapply connectionstring, modify create wanting

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "testingContext": "Server=(localdb)\\mssqllocaldb;Database=testingDB;Trusted_Connection=True;MultipleActiveResultSets=true;User=sa; Password =Pakistan123+"
-
+    "petFinderContext": "Server=localhost,1433;Database=CatFinderDB;User Id=sa;Password=Stkhm-9876;TrustServerCertificate=true"
   }
 }
