remove axios error

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "testingContext":"Server=(localdb)\\mssqllocaldb;Database=testingDB;Trusted_Connection=True;MultipleActiveResultSets=true;User=sa; Password =Pakistan123+"
+    "testingContext":""
 
   },
   "Logging": {
