--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "testingContext": "Server=(localdb)\\mssqllocaldb;Database=testingDB;Trusted_Connection=True;MultipleActiveResultSets=true;User=sa; Password =Pakistan123+"
+    "testingContext": ""
 
   }
 }
