--- a/PetFinderBackend.csproj
+++ b/PetFinderBackend.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Azure.Storage.Blobs" Version="12.14.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
         <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.2.3" />
         <PackageReference Include="Microsoft.Azure.Storage.Common" Version="11.2.3" />
